# Uxsched_1

./: .gitignore  AGENTS.md  CMakeLists.txt  IAH_Design.md  README.md  SLO_GPU_Scheduling_Design.md  SchedUM.md  benchmark.md  hb_integration_status.md
benchmark_results/.build/: xsched_preemption_latency_helper.cu
benchmark_results/preemption_latency_scaling_20260624_184932/: preemption_latency_scaling.csv  summary.json
benchmark_results/rtx4060_latency_cdf_20260624_113317/: comparison.json  config.json
benchmark_results/rtx4060_latency_cdf_20260624_122209/: comparison.json  config.json
benchmark_results/rtx4060_latency_cdf_20260624_131228/: config.json
benchmark_results/rtx4060_latency_cdf_20260624_152633/: comparison.json  config.json
benchmark_results/rtx4060_latency_cdf_20260624_163228/: comparison.json  config.json
benchmark_results/rtx4060_latency_cdf_20260626_222613/: comparison.json  config.json
benchmark_results/rtx4060_latency_cdf_20260627_000419/: comparison.json  config.json
benchmarks/: preemption_latency_scaling.py  realtime_inference_latency.py
benchmarks/cutlass/: CMakeLists.txt  cutlass_launch_probe.cu  cutlass_probe_common.h  cutlass_realtime_worker.cu  verified_kernel_sm120_fp32_simt.txt
docs/: IAH_design.md  codex_handoff.md  cutlass_realtime_benchmark_plan.md  hummingbird_backend_design.md  hummingbird_backend_implementation.md  hummingbird_backend_results.md  hummingbird_backend_test_plan.md  hummingbird_runtime_architecture.md  hummingbird_runtime_bubble_detection.md  hummingbird_runtime_profiler.md  hummingbird_runtime_reaudit.md  hummingbird_runtime_results.md  hummingbird_runtime_state_machine.md  hummingbird_runtime_test_plan.md
tools/: aggregate_cutlass_split_size_sweep.py  analyze_cutlass_standalone_stability.py  bench_cuda_level_preempt.py  bench_gpu_priority.py  build_cutlass_launch_probe.sh  build_hb_metadata_registry_probe.sh  build_hb_xqueue_probe.sh  hb_metadata_registry_probe.cpp  hb_xqueue_probe.cpp  plot_cutlass_realtime_results.py  plot_cutlass_split_size_sweep.py  plot_preemption_latency.py  plot_realtime_latency.py  profile_torch_workloads.py  run_cutlass_launch_probe.sh  run_cutlass_realtime_compare.sh  run_cutlass_split_size_sweep.sh  run_hb_gate1_smoke.sh  schedum_oversub.py  summarize_cutlass_realtime_compare.py  time_torch_blocks.py
(+106 files in other folders)
